--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "next": "15.1.7",
     "react": "^19.0.0",
